// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot for locked die 1`] = `
<button
  className="Die Die-locked"
  onClick={[Function]}
/>
`;

exports[`matches snapshot for unlocked die 1`] = `
<button
  className="Die"
  onClick={[Function]}
/>
`;
